--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -1,28 +1,21 @@
 name: Build and Test
 
-on :
-  push:
-    branches :
-        - main
+    on:
+      push:
+        branches: [ main ]
 
-    tags :
-      - 'v*'
+    jobs:
+      build:
+        runs-on: ubuntu-latest
 
-  workflow_dispatch :
-  schedule :
-    - cron : '0 1 * * *'
+        steps:
+          - name: Checkout code
+            uses: actions/checkout@v2
 
-jobs :
+          - name: Setup JDK
+            uses: actions/setup-java@v2
+            with:
+              java-version: '11'
 
-  local_test_job :
-    name : Running Local Tests
-    runs-on : ubuntu-latest
-
-    continue-on-error : true
-    steps :
-      - name : Checkout
-      uses : actions/checkout
-      - name : Set up JDK 11
-        uses : action/setup-java@v1
-        with :
-          java-version : 11
+          - name: Build app
+            run: ./gradlew assembleDebug
